Enhance footer with donation info and credits
Updated footer to include donation link and creator credit.

--- a/index.html
+++ b/index.html
@@ -80,9 +80,13 @@
     </div>
     <div id="pad-status"></div>
   </div>
-  <footer>
-    Powered by <a href="https://puter.com/" target="_blank">Puter.js</a> · Have fun and tip your developer!
-  </footer>
+<footer>
+  Powered by <a href="https://puter.com/" target="_blank">Puter.js</a> ·
+  This was created &amp; baked by Sweetbiscuit44.<br>
+  Your kind donation of even $1 will keep the pantry—or kitchen!—making more biscuits.<br>
+  <a href="https://paypal.me/sweetbiscuit44" target="_blank" style="color:#509172; font-weight:bold;">🍪 Donate to the Pantry</a>
+</footer>
+
 <script>
 function showUserInfo(text) {
   document.getElementById('user-info').textContent = text;
@@ -147,3 +151,4 @@ function loadPad() {
 </script>
 </body>
 </html>
+
