Refactor footer design and donation information
Updated footer style and added donation link.

--- a/index.html
+++ b/index.html
@@ -81,12 +81,33 @@
     <div id="pad-status"></div>
   </div>
   
-<footer>
-  Powered by <a href="https://puter.com/" target="_blank">Puter.js</a> ·
-  This was created &amp; baked by Sweetbiscuit44.<br>
-  Your kind donation of even $1 will keep the pantry—or kitchen!—making more biscuits.<br>
-  <a href="https://paypal.me/sweetbiscuit44" target="_blank" style="color:#509172; font-weight:bold;">🍪 Donate to the Pantry</a>
+<footer style="
+  background: rgba(255,255,255,0.9);
+  border-radius: 16px;
+  margin: 2em auto 1.2em;
+  max-width: 440px;
+  padding: 1em .6em 1em .6em;
+  box-shadow: 0 2px 12px #aed6c733;
+  text-align: center;
+  font-size: 1.05em;
+  color: #377c53;
+">
+  <div style="margin-bottom:.4em;">
+    Powered by <a href="https://puter.com/" target="_blank" style="color:#319967;">Puter.js</a><br>
+    Created &amp; baked by <strong>Sweetbiscuit44</strong>
+  </div>
+  <div style="margin:.56em 0 1em 0;">
+    Your kind donation of even <strong>$1</strong> keeps the pantry—or kitchen!—making more biscuits.
+  </div>
+  <a href="https://paypal.me/sweetbiscuit44" target="_blank"
+    style="background:linear-gradient(90deg,#ffe399 0%,#f0b576 100%);
+    color:#75492c; font-weight:700; font-size:1.11em; 
+    padding:10px 23px; border-radius:22px; 
+    display:inline-block; text-decoration:none; box-shadow:0 1px 8px #cead7833;">
+    🍪 Donate to the Pantry
+  </a>
 </footer>
+
 
 <script>
 function showUserInfo(text) {
@@ -152,5 +173,6 @@ function loadPad() {
 </script>
 </body>
 </html>
+
 
 
